@@ -4,8 +4,6 @@ import com.shiroha.mmdskin.config.PathConstants;
 import com.shiroha.mmdskin.renderer.model.MMDModelManager;
 import com.shiroha.mmdskin.renderer.resource.MMDTextureManager;
 import com.shiroha.mmdskin.renderer.animation.MMDAnimManager;
-import com.mojang.blaze3d.systems.RenderSystem;
-import com.mojang.blaze3d.vertex.PoseStack;
 import java.io.BufferedInputStream;
 import java.io.BufferedOutputStream;
 import java.io.File;
@@ -13,12 +11,11 @@ import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.StandardCopyOption;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
-import net.minecraft.client.renderer.GameRenderer;
 import org.apache.commons.io.FileUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -172,7 +169,7 @@ public class MmdSkinClient {
             skin3DFolder.mkdir();
             String gameDir = PathConstants.getGameDirectory();
             try{
-                FileUtils.copyURLToFile(new URL(PathConstants.RESOURCE_DOWNLOAD_URL), 
+                FileUtils.copyURLToFile(URI.create(PathConstants.RESOURCE_DOWNLOAD_URL).toURL(), 
                     new File(gameDir, PathConstants.RESOURCE_ZIP_NAME), 30000, 30000);
             }catch (IOException e){
                 logger.info("Download 3d-skin.zip failed!");
@@ -209,12 +206,7 @@ public class MmdSkinClient {
     }
     
     public static void drawText(String arg, int x, int y){
-        //MinecraftClient MCinstance = MinecraftClient.getInstance();
-        PoseStack mat;
-        RenderSystem.setShader(GameRenderer::getPositionColorShader);
-        mat = RenderSystem.getModelViewStack();
-        mat.pushPose();
-        //instance.textRenderer.draw(mat, arg, x, y, -1);
-        mat.popPose();
+        // MC 1.21.1: RenderSystem.getModelViewStack() 已移除，使用新的渲染 API
+        // 此方法暂不使用，保留空实现
     }
 }
